Рабочая версия №1 демонстрационного приложения

--- a/src/java/resource/config.properties
+++ b/src/java/resource/config.properties
@@ -2,8 +2,8 @@
 ################################
 path.page.index=/index.jsp
 path.page.login=/pages/login.jsp
-path.page.login=/pages/logout.jsp
-path.page.error=/pages/error/error.jsp
+path.page.logout=/pages/logout.jsp
+path.page.error=/pages/errors/error.jsp
 path.page.page1=/pages/page1.jsp
-path.page.page2=/pages/page2.jap
+path.page.page2=/pages/page2.jsp
 
